# TryphonROS_WS

./: .gitignore  README.md  launch_sequence.txt  single_launch_sequence.txt
src/artag_pose/: CMakeLists.txt  package.xml
src/artag_pose/cfg/: ArtagPose.cfg
src/artag_pose/config/: cafeteria.yaml
src/artag_pose/launch/: ar_track_243.launch  ar_track_243_2.launch  ar_track_244.launch  ar_track_2cam-100cm-tag.launch  ar_track_camera1.launch  ar_track_camera3.launch  ar_track_test.launch~  arcam_1.launch  arcam_1_big.launch  arcam_1_big_target.launch  arcam_1_small.launch  arcam_1_small_target.launch  arcam_2.launch  arcam_2_big.launch  arcam_2_big_target.launch  arcam_2_small.launch  arcam_2_small_target.launch  arcam_both.launch  arcam_both_big_small.launch  arcam_both_big_small_target.launch  artest.launch  artest2.launch  default.launch  defaultCamera.yaml  for_cube_243_startup_camera_and_alvar.launch  linaro@192.168.10.243  test.launch
src/artag_pose/src/: ar_convert.cpp  artag_pose_node.cpp  artag_subscriber.cpp  default_config.cpp  markers_pose.cpp  particle_filter.cpp  test_pose_node.cpp  tf_config_loader.cpp  yaml_config_loader.cpp
src/cameras_tryphon/: CMakeLists.txt  package.xml  package_old.xml
src/cameras_tryphon/cfg/: cameras.cfg  cameras_freerun.cfg
src/cameras_tryphon/launch/: arcamera1.launch  arparam.yaml  cam1_freerun.launch  camera_view_ar.launch  cams_synchronized.launch  ffmv2.yaml  ffmv2c.yaml  ffmv2cauto.yaml  ffmv3c.yaml  relay_camera1.launch  test.launch
src/cameras_tryphon/src/: pgrff_node_software.cpp  pgrff_tryphon_software2.cpp
src/controls/: CMakeLists.txt  package.xml
src/controls/cfg/: control.cfg  control.cfg~  dock_control.cfg  fdistribution.cfg  formation.cfg  glideslope.cfg  magnet.cfg  trajectory.cfg
src/controls/include/: Euler_utility.h  controls.h  ctr_fuzzy.h  cube.h  roseigen.h
src/controls/launch/: Untitled Document~  controls1.launch  controls1.launch.save  controls_243.launch  controls_243.launch~  controls_244.launch  controls_244.launch~  force_distribution34.launch  force_distribution_241.launch  force_distribution_243.launch  force_distribution_244.launch  trajectory34.launch  trajectory34.launch~  trajectory_243.launch  trajectory_244.launch
src/controls/msg/: Commands.msg  State.msg  webCommands.msg
src/controls/src/: ar_convert.cpp  control.cpp  control_end_residency.cpp  control_old.cpp  control_working.cpp  controlleddar.cpp  controlxzlc.cpp  ctr_fuzzy.cpp  ctr_fuzzy.cpp_new  dock_control.cpp  force_distribution.cpp  formation.cpp  fuzzy_core.cpp  glideslope original.cpp  glideslope.cpp  glideslope_rel.cpp  glideslope_test.cpp  magnet.cpp  params_estimation.cpp  trajectory.cpp  vects2geoMsgs.cpp
src/ekf_tryphon/: CMakeLists.txt  package.xml
src/ekf_tryphon/cfg/: ekf.cfg
src/ekf_tryphon/include/: Kalman_utility.h  kalmanbasefilter.h
src/ekf_tryphon/src/: ar_temp.cpp  kalmanbasefilter.cpp  kalmanmeilleur.cpp  kalmanmeilleur_dock.cpp
src/ff_cameras/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/ff_cameras/launch/: ff_pgr_2c.launch  ff_pgr_cam1.launch  ff_pgr_cam2.launch  ffmv.yaml  ffmv2c.yaml
src/ff_cameras/src/: camera1.yaml  camera2.yaml  ff_node.cpp  pgrff_node.cpp  pgrff_node_save.cpp
src/leddartech/: CMakeLists.txt  CMakeLists.txt_old  mainpage.dox  manifest.xml.old  package.xml
src/leddartech/launch/: example.launch
src/leddartech/msg/: leddar_data.msg
src/leddartech/src/: leddar_one.cpp
src/links/: CMakeLists.txt  package.xml
src/links/launch/: Untitled Document  links_243.launch
src/links/msg/: imubuff.msg  imuros.msg
src/links/src/: link_imubuff.cpp  links_imubuff.cpp
src/mode/: CMakeLists.txt  package.xml  package.xml_old
src/mode/cfg/: mode.cfg
src/mode/launch/: control_mode.launch  ps3_mode.launch
src/mode/src/: mode.cpp
src/ps3/: CMakeLists.txt  package.xml
src/ps3/include/: ps3values.h
src/ps3/launch/: gocave.launch  ps3_243.launch  ps3_243.launch~  ps3_force.launch  ps3_pose.launch  ps3_z.launch  testing.launch
src/ps3/src/: magnet.cpp  ps3.cpp  ps3XZLC.cpp  ps3_z.cpp  ps3_z.cpp.old
src/sensors/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.user.2.5pre1  package.xml
src/sensors/include/: Leddar.h  ahrs.h  base64.h  capteurs.h  cube.h  i2c-dev.h  imu_driver.h  imumaths.h  lpc.h  motors.h  motors.h~  robocomm.h  robocomm.h.new2  robocomm.h.old  t_commande.h  vector.h
src/sensors/launch/: sensors_thrusters.launch
src/sensors/msg/: compass.msg  forces.msg  imubuff.msg  leddar.msg  leddarArray.msg  motor_info.msg
src/sensors/src/: Leddar.cpp  Makefile  OptiControl.cpp  ahrs.cpp  base64.cpp  imu_driver.cpp  main.cpp  robocomm.cpp  robocomm.cpp.new2  robocomm.cpp.old  sensors_pub.cpp  sensors_thrusters.cpp  sensors_thrusters.cpp.old  thruster.cpp
src/sick_pos/: CMakeLists.txt  only_does_everything.sh~  package.xml  rviz_environnement_config.rviz
src/sick_pos/bag/: 2014-05-23-11-34-46.bag  2014-05-23-18-58-00.bag  2014-05-23-20-53-36.bag  2014-05-24-11-15-46.bag  2014-05-24-14-54-17.bag  2014-05-24-17-03-27.bag
src/sick_pos/cfg/: sickPose.cfg
src/sick_pos/src/: sick_pose_node.cpp
src/state/: CMakeLists.txt  package.xml
src/state/calibration/: tryphon_CM.yaml  tryphon_IMU.yaml  tryphon_IMU.yaml~  tryphon_SICK.yaml  tryphon_camera.yaml  tryphon_center.yaml~
src/state/include/: Euler_utility.h  Kalman_utility.h  YAMLParser.h
src/state/launch/: state_estimator.launch  state_estimator.launch~  state_estimator34.launch  state_estimator_2.launch  state_estimator_243.launch  state_estimator_243_m.launch  state_estimator_244.launch  state_estimator_IMU_buff.launch  state_estimator_IMU_buff.launch~  state_estimator_ar_243.launch
src/state/msg/: state.msg
src/state/src/: ar_state.cpp  ar_state_calc.cpp  desired_state.cpp  gazebo_rel.cpp  state_estimator.cpp  state_estimator_MCPTAM.cpp  state_estimator_SICK.cpp  state_estimator_ar.cpp  state_sub.cpp  test_command.cpp  testing.cpp
src/tcpPoseServer/: CMakeLists.txt  package.xml
src/tcpPoseStream/: CMakeLists.txt  package.xml
src/tests/: CMakeLists.txt  package.xml
(+263 files in other folders)
